--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: "About"
-description: "This is what I do."
+description: "I code. I read.. I think..."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>Coding is to me what the pen is to a writer, programming gives you power beyond the imaginable. I currently work developing web and mobile applications</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>In my short lifetime, I have read hundreds of books, thousands of Wikipedia articles, ten thousand single page flyers and blog posts and lot more</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>What are the odds of humans making contact with extraterrestrial intelligence in my lifetime? What if they are here already but exists in a different dimension? What is the true nature of reality? These are few of the questions that keeps awke at night.</p>
