--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Akinseye Olawale's blog"
+description: "Web and mobile application developer"
 ---
 
 {% for post in paginator.posts %}
