--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "I code. I read.. I think..."
+title: "Portfolio"
+description: "What I do"
 header-img: "img/about-bg.jpg"
 ---
 
