--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,85 @@ description: "What I do"
 header-img: "img/about-bg.jpg"
 ---
 
+<!-- My Services Section-->
+<div class='pad-section' id='services'>
+<div class='container'>
+<h2 class='text-center orbitron'>MY SERVICES</h2>
+<hr/>
+<div class='row text-center'>
+<div class='col-sm-3 col-xs-6'>
+<i class='glyphicon glyphicon-cloud'>
+</i>
+<h4>Website Design</h4>
+<p>HTML5, JAVASCRIPT, JQUERY, BOOTSTRAP3, PHP</p>
+</div>
+<div class='col-sm-3 col-xs-6'>
+<i class='glyphicon glyphicon-phone'>
+</i>
+<h4>Mobile Apps</h4>
+<p>IONIC, TELERIK, CORDOVA (PHONEGAP), INTEL XDK </p>
+</div>
+<div class='col-sm-3 col-xs-6'>
+<i class='glyphicon glyphicon-hourglass'>
+</i>
+<h4>Web Scrapping/Automation</h4>
+<p>CURL, iMACROS, PYTHON 2.7x, LIBCURL, BEAUTIFUL SOUP, URLLIB</p>
+</div>
+<div class='col-sm-3 col-xs-6'>
+<i class='glyphicon glyphicon-blackboard'>
+</i>
+<h4>Tutoring</h4>
+<p>MS-OFFICE, HTML5, JAVASCRIPT, JQUERY, PHPMYSQL, PHONEGAP </p>
+</div>
+</div>
+</div>
+</div>
+<!-- /End of My Services section -->
+<!-- My Portfolio section -->
+<div class='pad-section' id='portfolio'>
+<div class='container'>
+<h1 class='text-center orbitron'>
+     RECENT PROJECTS
+   </h1>
+<div class='row'>
+<div class='col-md-4 col-sm-6'>
+<div class='portfolio-item'>
+<figure>
+<img alt='porfolio image' class='img-responsive center-block' src='http://scambuster.info/images/lnn.png'/>
+</figure>
+<div class='portfolio-text'>
+<h3 class='text-center'><a href='https://play.google.com/store/apps/details?id=com.latest.nigerian.news'>Latest Nigerian News</a></h3>
+<p class='white text-center lobster'>An android app used by thousands of Nigerians daily</p>
+</div>
+</div>
+</div>
+<div class='col-md-4 col-sm-6'>
+<div class='portfolio-item'>
+<figure>
+<img alt='porfolio image' class='img-responsive center-block' src='http://scambuster.info/images/scam.png'/>
+</figure>
+<div class='portfolio-text'>
+<h3 class='white text-center'><a href='http://scambuster.info'> Scam Buster</a></h3>
+<p class='white text-center lobster'>Preventing scam and Identity theft in Nigeria</p>
+</div>
+</div>
+</div>
+<div class='col-md-4 col-sm-6'>
+<div class='portfolio-item'>
+<figure>
+<img alt='porfolio image' class='img-responsive center-block' src='http://scambuster.info/images/coming-soon.png'/>
+</figure>
+<div class='portfolio-text'>
+<h3 class='white text-center'>Coming Soon</h3>
+<p class='white text-center lobster'>This project is currently in progress</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- /End of My Portfolio section -->
+
 <p>Coding is to me what the pen is to a writer, programming gives you power beyond the imaginable. I currently work developing web and mobile applications</p>
 
 <p>In my short lifetime, I have read hundreds of books, thousands of Wikipedia articles, ten thousand single page flyers and blog posts and lot more</p>
