--- a/portfolio.html
+++ b/portfolio.html
@@ -5,45 +5,5 @@ description: "What I do"
 header-img: "img/about-bg.jpg"
 ---
 
-<!-- My Services Section-->
-<div class='pad-section' id='services'>
-<div class='container'>
-<h2 class='text-center orbitron'>MY SERVICES</h2>
-<hr/>
-<div class='row text-center'>
-<div class=''>
-<i class='glyphicon glyphicon-cloud'>
-</i>
-<h4>Website Design</h4>
-<p>HTML5, JAVASCRIPT, JQUERY, BOOTSTRAP3, PHP</p>
-</div>
-<div class=''>
-<i class='glyphicon glyphicon-phone'>
-</i>
-<h4>Mobile Apps</h4>
-<p>IONIC, TELERIK, CORDOVA (PHONEGAP), INTEL XDK </p>
-</div>
-<div class=''>
-<i class='glyphicon glyphicon-hourglass'>
-</i>
-<h4>Web Scrapping/Automation</h4>
-<p>CURL, iMACROS, PYTHON 2.7x, LIBCURL, BEAUTIFUL SOUP, URLLIB</p>
-</div>
-<div class=''>
-<i class='glyphicon glyphicon-blackboard'>
-</i>
-<h4>Tutoring</h4>
-<p>MS-OFFICE, HTML5, JAVASCRIPT, JQUERY, PHPMYSQL, PHONEGAP </p>
-</div>
-</div>
-</div>
-</div>
-<!-- /End of My Services section -->
 
-<!-- /End of My Portfolio section -->
-
-<p>Coding is to me what the pen is to a writer, programming gives you power beyond the imaginable. I currently work developing web and mobile applications</p>
-
-<p>In my short lifetime, I have read hundreds of books, thousands of Wikipedia articles, ten thousand single page flyers and blog posts and lot more</p>
-
-<p>What are the odds of humans making contact with extraterrestrial intelligence in my lifetime? What if they are here already but exists in a different dimension? What is the true nature of reality? These are few of the questions that keeps awake at night.</p>
+<p>Page under construction</p>
